test/files/neg/macro-invalidusage-nontypeable-typemacros/Test_2.scala
class C extends Macros.Foo {
  val x: Macros.Foo = null
}